# synapto

./: .dockerignore  .env.example  .gitignore  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: agno.md  claude-code.md  cursor.md  handoffs.md  hrr.md  langgraph.md  migrations.md  repository-pattern.md  trust-scoring.md
migrations/: 001_initial.sql  002_add_hrr.sql  003_metrics_events.sql  004_add_memory_subtype.sql  005_add_memory_domain.sql
src/synapto/: __init__.py  cli.py  config.py  coordination.py  server.py
src/synapto/db/: __init__.py  migrations.py  postgres.py  redis_cache.py
src/synapto/decay/: __init__.py  maintenance.py  scoring.py
src/synapto/embeddings/: __init__.py  base.py  openai_provider.py  registry.py  sentence_transformer.py
src/synapto/graph/: __init__.py  entities.py  relations.py
src/synapto/hrr/: __init__.py  banks.py  core.py  retrieval.py
src/synapto/migration/: __init__.py  detect.py  parse.py
src/synapto/prompts/: __init__.py  recall_empty.md  recall_preamble.md  server_instructions.md
src/synapto/repositories/: __init__.py  banks.py  entities.py  memories.py  metrics.py  relations.py
src/synapto/search/: __init__.py  graph.py  hybrid.py
src/synapto/telemetry/: __init__.py  decorators.py  logging.py  metrics.py
src/synapto/telemetry/backends/: __init__.py  postgres.py
tests/: conftest.py
tests/unit/: conftest.py  test_cli.py  test_config.py  test_coordination.py  test_coordination_prompts.py  test_db.py  test_decay.py  test_embeddings.py  test_hrr.py  test_logging_config.py  test_memory_retrieval_tools.py  test_metrics.py  test_metrics_postgres_backend.py  test_migration_detect.py  test_migration_parse.py  test_migrations.py  test_prompts.py  test_search_and_graph.py  test_server_instructions.py  test_system_reminder.py  test_telemetry_decorators.py  test_tool_metadata.py
