[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapto"
version = "0.1.0"
description = "Persistent memory graph for AI coding agents — semantic search, knowledge graph, and time-based decay over MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ramon de Lima Ramos", email = "ramonlimaramos@gmail.com" },
]
keywords = ["mcp", "memory", "ai", "agents", "vector-search", "knowledge-graph", "claude", "cursor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
dependencies = [
    "fastmcp>=2.0.0",
    "psycopg[binary,pool]>=3.1",
    "pgvector>=0.3.0",
    "redis>=5.0",
    "sentence-transformers>=3.0",
    "pydantic>=2.0",
    "click>=8.0",
    "tomli>=2.0;python_version<'3.11'",
    "tomli-w>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "build>=1.0",
]

[project.scripts]
synapto = "synapto.cli:main"

[project.urls]
Homepage = "https://github.com/ramonlimaramos/synapto"
Repository = "https://github.com/ramonlimaramos/synapto"
Issues = "https://github.com/ramonlimaramos/synapto/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/synapto"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # allow assert in non-test code (used in type narrowing)

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
